feat(deps): update on about.md

--- a/content/en/4.about.md
+++ b/content/en/4.about.md
@@ -10,9 +10,10 @@ About
 A few words about me
 
 #intro
-Developer and art director based in Nice, France
+Developer in Nakuru, Kenya
 
-With over 6 years of experience in the field, I enjoy blending beauty, design and technology to create unique, bespoke web experiences that exceed my clients' expectations.
+With over 3 years of experience in the field, I enjoy blending beauty, design and technology to create unique, 
+bespoke web experiences that exceed my clients' expectations.
 
 Whether collaborating with teams or leading design projects, my attention to detail and dedication to excellence have earned me a reputation for delivering exceptional results.
 
@@ -22,18 +23,15 @@ Even when I'm not working for my clients, I'm always looking for new things to l
   :::experiences
   ---
   experiences:
-    - title: Front-End Developer
-      company: 360&1
+    - title: Full Stack Developer
+      company: Genius Dynamics
       date: 2021 - Today
-    - title: CTO
-      company: Helpr
+    - title: Full Stack Developer
+      company: Emaxy IT
       date: 2023 - Today
-    - title: Artistic Director
-      company: Maison Hochard
-      date: 2022 - Today
-    - title: Web Developer
+    - title: Free Lancer
       company: Freelance
-      date: 2019 - Today
+      date: 2022 - Today
   ---
   :::
 
